--- a/Framework/Client/Include/imgui.ini
+++ b/Framework/Client/Include/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=650,124
 Size=400,400
 Collapsed=0
 
@@ -24,12 +24,17 @@ Size=199,352
 Collapsed=0
 
 [Window][Hierachy]
-Pos=1073,374
-Size=195,398
+Pos=1081,364
+Size=198,448
 Collapsed=0
 
 [Window][Tool]
-Pos=64,35
+Pos=29,6
 Size=327,353
+Collapsed=0
+
+[Window][Help]
+Pos=851,3
+Size=231,355
 Collapsed=0
 
